# Selective-Image-Compression

./: combine.cpp
Compressor/: import-summary.txt  local.properties  settings.gradle
Compressor/app/: build.gradle
Compressor/gradle/wrapper/: gradle-wrapper.properties
Compressor/openCVLibrary3410/: build.gradle
lib/: Bitmap.cpp  DWT.cpp  DWT.h  Huffman.h  Huffman1.cpp  bitfile.cpp  bitfile.h  main.cpp
lib1/: compress.cpp  merger.py
main/: AndroidManifest.xml
main/cpp/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  DWT.cpp  DWT.h  Huffman.cpp  Huffman1.cpp  Huffman1.h  bitfile.cpp  bitfile.h  combine.cpp  compress.cpp
main/java/com/example/imagecompressor/: MainActivity.java
main/res/layout/: activity_main.xml
main/res/values/: ids.xml  strings.xml
matlab/: readme.txt
matlab/img_comp_lossy/img_comp_lossy/: readme.txt  rlc.m  toZigzag.m
matlab/imgcomp_lossless/imgcomp_lossless/: color.py  compdwt.m  decompdwt.m  fichier.Hdwt  readme.txt
